fix stretching pictures in Articles

--- a/css/responcive.css
+++ b/css/responcive.css
@@ -797,7 +797,13 @@
         width: 100%;
     }
 
+    .block__img img.img {
+        width: inherit;
+    }
 
+    .block__img img.img.smallImg {
+        width: 100%;
+    }
 }
 
 @media (max-width: 385px) {
